# frosch

./: .coveragerc  .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-docs.yml  python-package.yml  python-publish.yml
about/: index.html
docs/: exception_printing.md  getting_started.md  index.md  notifications.md  requirements.txt  themes.md
example/: .nvimlog  example.py  lib.py  traceback_example.py
exception_printing/: index.html
frosch/: __init__.py  activate.py  config_manager.py  frosch.py  notifier.py  parser.py  printer.py  type_hooks.py  writer.py
frosch/dt_hooks/: __init__.py  hook_numpy.py  hook_torch.py
frosch/style/: __init__.py
frosch/style/token/: __init__.py
getting_started/: index.html
notifications/: index.html
pytrace/: __init__.py  analyzer.py  formatter.py  parser.py  pytrace.py
search/: search_index.json
tests/: test_config_manager.py  test_frosch.py  test_notifier.py  test_parser.py  test_type_hooks.py  test_writer.py
themes/: index.html
toad/: analyzer.py
