[tool.poetry]
name = "frosch"
version = "0.1.1"
description = "Better runtime error messages"
authors = ["Patrick Haller <patrickhaller40@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.4"
Pygments = "^2.7.2"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.1.2"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
example = "example:example"

[tool.pylint.messages_control]
max-line-width = 100
disable = "eval-used"