[tool.poetry]
name = "frosch"
version = "0.1.7"
description = "Better runtime error messages"
authors = ["Patrick Haller <patrickhaller40@googlemail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/HallerPatrick/frosch"
repository = "https://github.com/HallerPatrick/frosch"

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.4"
Pygments = "^2.7.2"
stack-data = "^0.1.0"
asttokens = "^2.0.4"
yapf = "^0.30.0"
pytest-sugar = "^0.9.4"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = "example.example:hello"

[tool.pylint.messages_control]
max-line-width = 100
disable = "eval-used"
ignore = "frosch/dt_hooks"
