[tool.poetry]
name = "frosch"
version = "0.1.9"
description = "Better runtime error messages"
authors = ["Patrick Haller <patrickhaller40@googlemail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/HallerPatrick/frosch"
repository = "https://github.com/HallerPatrick/frosch"

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.4"
Pygments = "^2.7.2"
stack-data = "^0.1.0"
asttokens = "^2.0.4"
yapf = ">=0.30,<0.32"
cheap_repr = ">=0.4.5,<0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = "example.example:hello"

[tool.pylint.messages_control]
max-line-width = 100
disable = "eval-used"
ignore = "frosch/dt_hooks"
